Correctifs MAJ de la version mobile du site du 14.02.2025 et d'autres

--- a/src/components/collapse/Collapse.scss
+++ b/src/components/collapse/Collapse.scss
@@ -75,6 +75,7 @@
     @media screen and (max-width: 650px){
         flex-direction: column;
         gap: 20px;
+        box-sizing: border-box;
         margin: 20px auto;
         &_item{
             width: 100%;
