--- a/src/components/gallery/Gallery.scss
+++ b/src/components/gallery/Gallery.scss
@@ -8,20 +8,23 @@
     // @include flex;
     display: flex;
     flex-wrap: wrap;
-    gap: 50px;
+    gap: 2.5rem;   
+    // gap: 50px;
     align-items: center;
-    // background-color: variables.$color-tertiary;
-
-    background-color: #F6F6F6;
-    padding: 2rem;
+    background-color: #F6F6F6; 
+    // background-color: #FFFFFF;
+    padding: 3rem;
+    padding-right: 0.5rem;
     border-radius: 25px;
     width: 100%;
     margin: 0 auto;
-    @media screen and (max-width: 1230px){
+    @media screen and (max-width: 1240px){
         gap: 25px; 
-        padding:25px 15px;       
+        // padding: 25px 15px;       
     }
     @media screen and (max-width: 550px){  
         width: 100%;
+        background-color: #FFFFFF;
+        padding: 0;
     }
 }
