--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,16 +1,18 @@
 @use "index";
-// @use "/src/styles.index";
 
 #root {
   max-width: 1240px;
   margin: 0 auto;
   min-height: 100vh;
-  height: 100%;
+  // height: 100%;
   /*Positionement de mon layout*/
   display: flex;
   flex-direction: column;
-  // gap: 20px;
-}
+  gap: 20px;
+  padding: 0 1rem;
+  // padding: 1rem;
+  // padding-bottom: 0;
+  }
 
 .logo {
   height: 6em;
@@ -53,7 +55,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  margin-top: 1rem;
+  // margin-top: 1rem;
   position: relative;
   box-sizing: border-box;
 }
@@ -66,14 +68,13 @@ body {
     main {
       max-width: 1240px;
       box-sizing: border-box;
-      margin-top: 1rem;
       margin: 0 auto;
+      height: 100%;
           }
 
     & main {
       min-height: calc(100vh - 288px);
       flex: 1;
-      margin-top: 1rem;
       width: 100%;
     }
   }
