--- a/src/views/logement/Logement.scss
+++ b/src/views/logement/Logement.scss
@@ -1,4 +1,3 @@
-// @import '../../styles/main.scss';
 @use "/src/styles/main.scss";
 @use "/src/styles/mixins.scss"; 
 @use "/src/styles/variables.scss"; 
@@ -7,12 +6,14 @@
     display: flex;
     // height: 415px;
     width: 100%;
-    gap: 20px;
+    // gap: 20px;
+    gap: 2rem;
     background-color: #FFFFFF;
     flex-direction: column;
     min-height: calc(100vh - 40px);
     @media screen and (max-width: 500px){
         min-height: calc(100vh - 20px);
+
     }
 }
 
@@ -26,8 +27,7 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: flex-start;
-        gap: 20px;
-        // color: $color-secondary;
+        gap: 20px;        
         color: #000000;  // test color
         width: 100%;
         margin: 0 auto;
@@ -133,8 +133,7 @@
 
 .accomodation_collapse_item{
     width: 50%;
-    border-radius: 10px;
-    height: 52px;
+    border-radius: 10px;    
     @media screen and (max-width: 650px){
         width: 100%;
     }
